<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    tools:ignore="NewApi">


    <!-- Add this TextView for music name -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="MissingConstraints,NewApi" />


    <!-- Remove HorizontalScrollView and update TextView as follows -->


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="81dp"
        app:layout_constraintBottom_toTopOf="@+id/ic_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicName"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/musicName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/music_image"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/musicName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="97dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/totalDuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:text="@string/_0_00_c"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/totalDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="205dp"
        android:text="@string/_0_00_t"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/playPauseButton"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="@+id/ic_prev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ic_prev"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ic_prev"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/todo_icon1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playPauseButton"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTime"
        app:layout_constraintVertical_bias="0.394"
        app:srcCompat="@drawable/ic_prev"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ic_next"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/todo_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toEndOf="@+id/playPauseButton"
        app:layout_constraintTop_toBottomOf="@+id/totalDuration"
        app:layout_constraintVertical_bias="0.394"
        app:srcCompat="@drawable/ic_next"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
